# yohane

./: .gitattributes  .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  renovate.json  test.txt
.github/workflows/: calver.yml  ci.yml
notebook/: kara.ass  lyrics.txt  yohane.ipynb
samples/: CRYCHIC - 春日影 ⧸ THE FIRST TAKE [NJ1tne9u8YM].ass  KAF, ZOOKARADERU - PV - Himitsu no Kotoba.ass
yohane/: __init__.py  __main__.py  app.py  audio.py  audio_processing.py  force_alignment.py  lyrics.py  pipeline.py  subtitles.py  text_processing.py  utils.py
yohane-cli/: pyproject.toml
yohane-cli/yohane_cli/: __main__.py  app.py  audio.py  lyrics.py
yohane-fa/: README.md  config.yaml  pyproject.toml
yohane-fa/yohane_fa/: dataset.py  lightning.py  logger.py  modules.py  tokenizer.py  train.py
yohane_cli/: __init__.py  __main__.py
