[project]
name = "yohane"
version = "2024.10.9-dev"
description = "Forced alignment for karaokes"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "NextFire", email = "git@yuru.moe" },
    { name = "Voltini", email = "slimen3@hotmail.fr" },
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1,<3",
    "torchaudio>=2.1,<3",
    "vocal-remover",
    "pysubs2==1.7.3",
    "regex==2024.9.11",
]

[project.optional-dependencies]
cli = ["yohane-cli"]

[tool.uv]
dev-dependencies = ["pyright==1.1.385", "ruff==0.6.9"]

[tool.uv.sources]
yohane-cli = { workspace = true }
vocal-remover = { git = "https://github.com/Japan7/vocal-remover.git", branch = "6.0.0b4" }

[tool.uv.workspace]
members = ["yohane-cli"]

[project.scripts]
yohane = "yohane.__main__:main"

[project.urls]
Homepage = "https://github.com/Japan7/yohane"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.10"
reportDeprecated = true

[tool.ruff]
exclude = ["notebook"]

[tool.ruff.lint]
extend-select = ["I"]
